--- a/fundora-frontend/package.json
+++ b/fundora-frontend/package.json
@@ -13,9 +13,9 @@
     "@tanstack/react-query": "^4.29.19",
     "ethers": "^6.9.0",
     "framer-motion": "^7.6.6",
-    "next": "13.5.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "^13.5.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "viem": "^1.21.4",
     "wagmi": "^1.4.10"
   },
